--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
-  background-color: #01973f;
+  background-color: #008a38;
   padding: 0;
   margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
 #content {
   background-color: #f5f5f5;
   width: 100vw;
-  position: fixed;
   height: 66vh;
   bottom: 0;
 }
@@ -33,7 +34,7 @@ hr {
 }
 
 #upBtn {
-  background-color: #01c754;
+  background-color: #00c853;
   border: 0;
   border-radius: 3vh;
   width: 90%;
@@ -42,31 +43,59 @@ hr {
   font-size: 2vh;
   font-weight: bold;
   margin-bottom: 1.5vh;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 #downBtn {
   background-color: transparent;
   border-radius: 3vh;
   width: 90%;
-  color: #01c754;
+  color: #00c853;
   height: 6vh;
   font-size: 2vh;
   font-weight: bold;
-  border: 3px #01c754 solid;
+  border: 3px #00c853 solid;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 #upContent > h1 {
   color: white;
-  font-weight: bold;
+  font-weight: 400;
   font-family: sans-serif;
 }
 #upContent > h2 {
   color: white;
-  font-weight: bold;
+  font-weight: 400;
   font-family: sans-serif;
+  font-size: 2.5vh;
+}
+#upContent > h3 {
+  color: white;
+  font-weight: 400;
+  font-family: sans-serif;
+  font-size: 2vh;
 }
 
 #upContent {
   width: 100%;
   margin: 0 3vw 0 3vw;
-  height: 100%;
+  height: 34vh;
+}
+#menuSection {
+  margin-bottom: 1vh;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  align-items: center;
+  align-content: center;
+}
+#menuIcon {
+  fill: white;
+  margin-right: 3vh;
+  height: 2.5vh;
 }
