--- a/style.css
+++ b/style.css
@@ -13,16 +13,36 @@ body {
 }
 #incontent {
   background-color: white;
-  height: 50%;
+  height: 29vh;
   width: 100vw;
   border-bottom: 1px grey solid;
 }
 .element {
   width: 100%;
-  height: 15%;
+  height: 6vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 2vh;
 }
+#smallElement {
+  height: 4vh;
+}
+.element > div {
+  width: 40vw;
+  display: flex;
+  margin: 0 5vw 0 5vw;
+  background-color: rgb(255, 255, 255);
+  align-items: center;
+  font-weight: bold;
+  font-family: sans-serif;
+  color: #4c4c4c;
+}
+
 hr {
   color: gray;
+  margin: 0;
 }
 
 #downContent {
@@ -72,7 +92,8 @@ hr {
   color: white;
   font-weight: 400;
   font-family: sans-serif;
-  font-size: 2.5vh;
+  font-size: 2.3vh;
+  margin-bottom: 3.7vh;
 }
 #upContent > h3 {
   color: white;
