--- a/style.css
+++ b/style.css
@@ -90,10 +90,10 @@ hr {
 }
 #upContent > h2 {
   color: white;
-  font-weight: 400;
+  font-weight: bold;
   font-family: sans-serif;
   font-size: 2.3vh;
-  margin-bottom: 3.7vh;
+  margin-bottom: 3.2vh;
 }
 #upContent > h3 {
   color: white;
