--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 #content {
   background-color: #f5f5f5;
@@ -122,3 +123,10 @@ hr {
   margin-right: 3vh;
   height: 2.5vh;
 }
+.disable-selection {
+  -webkit-touch-callout: none; /* iOS Safari                           */
+    -webkit-user-select: none; /* Safari                               */
+     -khtml-user-select: none; /* Konqueror HTML                       */
+       -moz-user-select: none; /* Firefox w przeszłości (stare wersje) */
+        -ms-user-select: none; /* Internet Explorer (>=10) / Edge      */
+            user-select: none; /* Aktualnie wspierane przez:           */
