--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ hr {
 .video{
   width: 100vw;
     margin: 0 0 0 -3vw;
-    /* transform: scaleY(1.2); */
+    transform: scaleY(1.2);
 }
 
 .disable-selection {
