--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
+html{
+  overflow-x: hidden;
+}
 body {
   background-color: #008a38;
   padding: 0;
   margin: 0;
-  height: 100vh;
+  height: 110vh;
   width: 100vw;
   overflow: hidden;
 }
 #content {
   background-color: #f5f5f5;
-  width: 100vw;
-  height: 80vh;
+    width: 100vw;
+    height: 85vh;
 }
 #incontent {
   background-color: white;
