--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   background-color: white;
   height: 29vh;
   width: 100vw;
-  border-bottom: 1px grey solid;
+  border-bottom: 1px #ccc solid;
 }
 .element {
   width: 100%;
@@ -47,8 +47,11 @@ body {
 }
 
 hr {
-  color: #dcdcdc;
+  display: block;
+  height: 1px;
   margin: 0;
+  border: 0;
+  border-top: 1px solid #ccc;
 }
 
 #downContent {
@@ -150,7 +153,7 @@ hr {
   width: 100vw;
   z-index: 10000;
   height: 80vh;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   background-color: white;
