--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 body {
   background-color: #008a38;
@@ -38,7 +38,7 @@ body {
   margin: 0 5vw 0 5vw;
   background-color: rgb(255, 255, 255);
   align-items: center;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-family: sans-serif;
   color: #4c4c4c;
 }
@@ -59,16 +59,16 @@ hr {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 50%;
+  height: 35%;
 }
 
 #upBtn {
-  background-color: #00c853;
+  background-color: #f79518;
   border: 0;
-  border-radius: 3vh;
+  border-radius: 1vh;
   width: 90%;
   color: white;
-  height: 6vh;
+  height: 5vh;
   font-size: 2vh;
   font-weight: bold;
   margin-bottom: 1.5vh;
@@ -80,13 +80,13 @@ hr {
 
 #downBtn {
   background-color: transparent;
-  border-radius: 3vh;
+  border-radius: 1vh;
   width: 90%;
-  color: #00c853;
-  height: 6vh;
+  color: #f79518;
+  height: 5vh;
   font-size: 2vh;
   font-weight: bold;
-  border: 3px #00c853 solid;
+  border: 3px #f79518 solid;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -103,7 +103,7 @@ hr {
   color: white;
   font-weight: bold;
   font-family: sans-serif;
-  font-size: 2.3vh;
+  font-size: 2.2vh;
   height: 3vh;
   margin-bottom: 0;
 }
@@ -186,7 +186,7 @@ hr {
   padding: 0;
   outline-style: none;
   border: 0;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-family: sans-serif;
   font-size: 2vh;
   color: #4c4c4c;
@@ -195,3 +195,39 @@ hr {
 select::-ms-expand {
   display: none;
 }
+
+#downMenu {
+  position: fixed;
+  bottom: -1vh;
+  left: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #d1d1d1;
+  width: 100vw;
+  height: 7%;
+  border-radius: 1.5vh;
+  z-index: 10000;
+}
+.menuInputs {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 31vw;
+  margin-bottom: 1vh;
+  justify-content: center;
+}
+
+.menuInputs > img {
+  width: 38vw;
+  border-radius: 2vh;
+}
+
+/* #stupidBtn {
+  height: 90%;
+}
+#stupidBtn > img {
+  height: 96%;
+} */
